# programproject

./: CMakeLists.txt  CMakePresets.json  HACKING.md
cmake/: FetchLib2.cmake
source/: lib.cpp  main.cpp
test/: CMakeLists.txt
test/source/: programproject_test.cpp
